Storefront: Improve compatibility with Safari.

--- a/apps/web/src/app/(shops)/_components/login-button.module.scss
+++ b/apps/web/src/app/(shops)/_components/login-button.module.scss
@@ -3,7 +3,7 @@
         opacity: 0.5;
     }
 
-    :is([data-content], [data-icon]) {
+    &:is([data-content], [data-icon]) {
         align-self: center;
         justify-self: center;
         height: 100%;
