--- a/apps/web/src/slices/common/IconGrid/icon-grid.module.scss
+++ b/apps/web/src/slices/common/IconGrid/icon-grid.module.scss
@@ -33,6 +33,9 @@
 
             object-position: center;
             object-fit: contain;
+
+            user-select: none;
+            pointer-events: none;
         }
 
         .title {
