--- a/apps/web/src/components/informational/vendors.module.scss
+++ b/apps/web/src/components/informational/vendors.module.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     padding: var(--block-padding) var(--block-padding-small);
-    background: var(--accent-secondary);
+    background: var(--color-accent-secondary-light);
     color: var(--accent-secondary-text);
 
     border-radius: var(--block-border-radius);
@@ -13,7 +13,7 @@
     text-decoration: none;
     text-transform: uppercase;
     font-size: 0.85em;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 1;
     cursor: pointer;
 
