--- a/apps/web/src/components/typography/content.module.scss
+++ b/apps/web/src/components/typography/content.module.scss
@@ -17,7 +17,7 @@
             text-underline-offset: var(--block-border-width);
         }
 
-        :is(b, strong) {
+        &:is(b, strong) {
             font-weight: 800;
         }
     }
