--- a/apps/web/src/slices/common/Collection/collection.module.scss
+++ b/apps/web/src/slices/common/Collection/collection.module.scss
@@ -34,11 +34,18 @@
             text-align: right;
         }
 
+        a:is(:hover):not(:disabled) {
+            color: var(--color-accent-primary);
+
+            text-decoration: underline;
+            text-decoration-style: dotted;
+            text-decoration-thickness: 0.2rem;
+            text-underline-offset: var(--block-border-width);
+        }
+
         .title {
             font-size: 2.5rem;
             font-weight: 500;
-            //text-decoration: underline dotted 0.2rem;
-            //text-underline-offset: var(--block-border-width);
 
             @media (min-width: $breakpoint-mobile) {
                 font-size: 2.25rem;
