--- a/apps/web/src/app/(storefront)/storefront/[domain]/[locale]/countries/countries.module.scss
+++ b/apps/web/src/app/(storefront)/storefront/[domain]/[locale]/countries/countries.module.scss
@@ -1,3 +1,5 @@
+@import '_globals.scss';
+
 .locale {
     display: grid;
     grid-template-columns: auto 1fr auto;
@@ -22,6 +24,31 @@
             border-color: var(--accent-secondary);
             background: var(--accent-secondary-light);
             color: var(--accent-secondary-text);
+        }
+    }
+}
+
+.list {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: var(--block-spacer);
+    padding: var(--block-spacer-small) 0 var(--block-spacer-large) 0;
+
+    @media (min-width: $breakpoint-mobile) {
+        grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr));
+    }
+
+    .flag {
+        position: relative;
+        overflow: hidden;
+        height: 4rem;
+        width: 4rem;
+        border-radius: 100%;
+
+        img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
         }
     }
 }
