--- a/apps/web/src/components/Footer/footer.module.scss
+++ b/apps/web/src/components/Footer/footer.module.scss
@@ -140,3 +140,126 @@
         }
     }
 }
+
+.bottom-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    gap: var(--block-spacer-small);
+
+    &:nth-child(2) {
+        align-items: center;
+        gap: var(--block-spacer-small);
+
+        @media (min-width: $breakpoint-mobile) {
+            gap: var(--block-spacer);
+            align-items: flex-end;
+        }
+    }
+
+    @media (min-width: $breakpoint-mobile) {
+        justify-content: flex-end;
+        align-items: flex-start;
+        gap: 0.5em;
+        gap: var(--block-spacer-large);
+    }
+
+    .important,
+    .socials {
+        display: flex;
+        flex-wrap: wrap;
+        gap: var(--block-spacer);
+        justify-content: center;
+        align-items: center;
+
+        @media (min-width: $breakpoint-mobile) {
+            display: grid;
+            grid-template-columns: auto auto auto;
+            height: 3rem;
+            align-items: flex-end;
+            justify-self: flex-end;
+        }
+    }
+    .socials {
+        display: flex;
+        height: 3rem;
+        width: 100%;
+        width: 100%;
+
+        @media (min-width: $breakpoint-mobile) {
+            justify-content: flex-end;
+            align-items: flex-start;
+        }
+
+        .social {
+            position: relative;
+            width: 3.5rem;
+            height: 3.5rem;
+
+            @media (min-width: $breakpoint-mobile) {
+                width: 3rem;
+                height: 3rem;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+
+                object-fit: contain;
+            }
+        }
+    }
+
+    .legal-and-copyrights {
+        display: flex;
+        align-items: center;
+        justify-self: flex-end;
+        margin: var(--block-spacer) 0;
+
+        @media (min-width: $breakpoint-mobile) {
+            align-items: flex-end;
+
+            height: 4rem;
+            margin: 0;
+        }
+
+        .policy {
+            font-size: 1.5rem;
+            font-weight: 700;
+            text-transform: uppercase;
+
+            @media (min-width: $breakpoint-mobile) {
+                display: flex;
+                justify-content: center;
+                align-items: flex-end;
+                height: 3rem;
+                padding: 0;
+                font-weight: 800;
+                font-size: 1.25rem;
+                line-height: 1;
+            }
+        }
+
+        .copyright {
+            display: block;
+            font-size: 1.5rem;
+            font-weight: 700;
+            line-height: normal;
+            text-transform: uppercase;
+            text-align: left;
+
+            @media (min-width: $breakpoint-mobile) {
+                display: flex;
+                justify-content: center;
+                align-items: flex-end;
+                gap: var(--block-spacer-small);
+                height: 3rem;
+                font-weight: 800;
+                text-align: right;
+                font-size: 1.25rem;
+                line-height: 1;
+            }
+        }
+    }
+}
