--- a/apps/web/src/components/informational/vendors.module.scss
+++ b/apps/web/src/components/informational/vendors.module.scss
@@ -5,15 +5,16 @@
     justify-content: center;
     align-items: center;
     padding: var(--block-padding) var(--block-padding-small);
+
     background: var(--color-accent-secondary-light);
     color: var(--accent-secondary-text);
 
-    border-radius: var(--block-border-radius);
+    border-radius: var(--block-border-radius-large);
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 0.85em;
-    font-weight: 600;
+    font-size: 0.75em;
+    font-weight: 700;
     line-height: 1;
     cursor: pointer;
 
