Design: Minor fixes.

--- a/apps/web/src/components/ProductCard/product-card.module.scss
+++ b/apps/web/src/components/ProductCard/product-card.module.scss
@@ -50,7 +50,7 @@
         user-select: none;
 
         background-color: var(--product-card-color-image-background, var(--color-bright));
-        box-shadow: 0 0 1rem -0.5rem var(--color-block-shadow);
+        //box-shadow: 0 0 1rem -0.5rem var(--color-block-shadow);
 
         .image {
             position: absolute;
