--- a/apps/web/src/slices/common/IconGrid/icon-grid.module.scss
+++ b/apps/web/src/slices/common/IconGrid/icon-grid.module.scss
@@ -1,8 +1,8 @@
 @import '_globals.scss';
 
-.container {
-    display: grid;
-    flex-direction: column;
+section.container {
+    display: flex;
+    flex-direction: row;
     grid-template-columns: 1fr;
     justify-content: center;
     align-items: center;
