Input+CartNote: Refactor from styled to a scss module.

--- a/apps/web/src/components/cart/cart-lines.module.scss
+++ b/apps/web/src/components/cart/cart-lines.module.scss
@@ -7,7 +7,7 @@
     gap: var(--block-spacer);
     width: 100%;
 
-    @media (min-width: $breakpoint-tablet-medium) {
+    @media (min-width: $breakpoint-mobile) {
         grid-template-columns: 1fr 1fr;
     }
 
