--- a/apps/web/src/app/(shops)/admin/(news)/news/layout.module.scss
+++ b/apps/web/src/app/(shops)/admin/(news)/news/layout.module.scss
@@ -1,10 +1,13 @@
 .container {
     .content {
         display: flex;
+        -ms-flex-direction: column;
         flex-direction: column;
         gap: var(--layout-section-padding);
+
         width: 100%;
         max-width: 100%;
+
         padding-top: calc(var(--layout-section-spacing) * 2);
 
         h1 {
