--- a/apps/web/src/app/(shops)/admin/(news)/news/page.module.scss
+++ b/apps/web/src/app/(shops)/admin/(news)/news/page.module.scss
@@ -2,6 +2,7 @@
     .heading {
         overflow: hidden;
         display: flex;
+        -ms-flex-direction: column;
         flex-direction: column;
         gap: calc(var(--layout-block-padding) / 2);
         width: 100%;
@@ -14,6 +15,7 @@
         grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
         grid-auto-rows: 1fr;
         gap: var(--layout-block-padding);
+
         width: 100%;
         max-width: 100%;
         margin-top: calc(var(--layout-section-spacing) * 2);
@@ -22,9 +24,13 @@
             overflow: hidden;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: flex-start;
             align-items: flex-start;
             gap: calc(var(--layout-block-padding) / 4);
+
+            .heading {
+                color: var(--color-foreground);
+            }
 
             &:is(a) {
                 user-select: none;
