--- a/apps/web/src/components/products/quantity-selector.module.scss
+++ b/apps/web/src/components/products/quantity-selector.module.scss
@@ -1,6 +1,7 @@
 @import '_globals.scss';
 
 .container {
+    overflow: clip;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
