--- a/apps/web/src/app/storefront/(storefront)/[domain]/[locale]/cart/cart-content.module.scss
+++ b/apps/web/src/app/storefront/(storefront)/[domain]/[locale]/cart/cart-content.module.scss
@@ -1,9 +1,12 @@
 @import '_globals.scss';
 
 .container {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: var(--block-spacer-large);
+
+    height: 100%;
 
     .content {
         display: grid;
@@ -11,7 +14,9 @@
         grid-template-rows: auto 1fr;
         grid-template-areas: 'content' 'sidebar';
         gap: var(--block-spacer-large);
+
         max-width: 100%;
+        height: 100%;
 
         @media (min-width: $breakpoint-mobile) {
             grid-template-columns: 1fr minmax(auto, 36rem);
