--- a/apps/web/src/components/actionable/button.module.scss
+++ b/apps/web/src/components/actionable/button.module.scss
@@ -31,8 +31,13 @@
         $animation-duration ease-in-out color,
         $animation-duration ease-in-out font-weight;
 
-    cursor: pointer;
+    -webkit-user-select: none;
     user-select: none;
+
+    cursor: pointer;
+    &:is(:hover, :active) {
+        cursor: pointer;
+    }
 
     @media (min-width: $breakpoint-mobile) {
         gap: var(--block-spacer-small);
