--- a/apps/web/src/slices/common/IconGrid/icon-grid.module.scss
+++ b/apps/web/src/slices/common/IconGrid/icon-grid.module.scss
@@ -1,26 +1,28 @@
 @import '_globals.scss';
 
 section.container {
-    display: flex;
-    flex-direction: row;
+    display: grid;
     grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
     justify-content: center;
     align-items: center;
     gap: var(--block-spacer-large);
 
-    min-height: calc(var(--block-padding-large) * 4);
-
     @media (min-width: $breakpoint-mobile) {
+        grid-template-rows: 100%;
         grid-template-columns: 1fr 1fr 1fr;
     }
 
     .item {
-        display: inline-grid;
-        grid-template-columns: auto 1fr;
+        flex-grow: 1;
+        display: grid;
+        grid-template-columns: 4rem auto;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         gap: var(--block-spacer-large);
 
+        height: 100%;
+        width: 100%;
         padding: var(--block-padding-large);
 
         border-radius: var(--block-border-radius);
@@ -34,6 +36,7 @@ section.container {
             object-position: center;
             object-fit: contain;
 
+            -webkit-user-select: none;
             user-select: none;
             pointer-events: none;
         }
