--- a/apps/web/src/scss/_animations.scss
+++ b/apps/web/src/scss/_animations.scss
@@ -1,9 +1,8 @@
 @keyframes shimmer {
     from {
-        background-position: -468px 0;
+        background-position: 200% 0;
     }
-
     to {
-        background-position: 468px 0;
+        background-position: -200% 0;
     }
 }
