--- a/apps/web/src/slices/common/Collection/collection.module.scss
+++ b/apps/web/src/slices/common/Collection/collection.module.scss
@@ -12,48 +12,47 @@
         color: var(--foreground);
     }
 
-    .header {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+    .align-left {
+        justify-self: flex-start;
+        align-self: flex-start;
         align-items: flex-start;
-        gap: var(--block-spacer-small);
+        text-align: left;
+    }
+    .align-center {
+        justify-self: center;
+        align-self: center;
+        align-items: center;
+        text-align: center;
+    }
+    .align-right {
+        justify-self: flex-end;
+        align-self: flex-end;
+        align-items: flex-end;
+        text-align: right;
+    }
 
-        &.align-left {
-            align-items: flex-start;
-            text-align: left;
-        }
-        &.align-center {
-            align-items: center;
-            text-align: center;
-        }
-        &.align-right {
-            align-items: flex-end;
-            text-align: right;
-        }
+    a:is(:hover):not(:disabled) {
+        color: var(--color-accent-primary);
 
-        a:is(:hover):not(:disabled) {
-            color: var(--color-accent-primary);
+        text-decoration: underline;
+        text-decoration-style: dotted;
+        text-decoration-thickness: 0.2rem;
+        text-underline-offset: var(--block-border-width);
+    }
 
-            text-decoration: underline;
-            text-decoration-style: dotted;
-            text-decoration-thickness: 0.2rem;
-            text-underline-offset: var(--block-border-width);
-        }
+    .title {
+        font-size: 2.5rem;
+        font-weight: 500;
 
-        .title {
-            font-size: 2.5rem;
-            font-weight: 500;
-
-            @media (min-width: $breakpoint-mobile) {
-                font-size: 2.25rem;
-            }
-        }
-
-        .body {
-            max-width: 64rem;
+        @media (min-width: $breakpoint-mobile) {
+            font-size: 2.25rem;
         }
     }
+
+    .body {
+        max-width: 64rem;
+    }
+    //}
 
     &.full {
         .full-collection {
